--- a/watch.ioc
+++ b/watch.ioc
@@ -156,13 +156,14 @@ RCC.RTCFreq_Value=32768
 RCC.TimSysFreq_Value=8000000
 SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
-TIM2.IPParameters=Prescaler,Period
-TIM2.Period=9
-TIM2.Prescaler=99
+TIM2.ClockDivision=TIM_CLOCKDIVISION_DIV4
+TIM2.IPParameters=Prescaler,Period,ClockDivision
+TIM2.Period=999
+TIM2.Prescaler=7999
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM3.IPParameters=Prescaler,Period,AutoReloadPreload
-TIM3.Period=1000
-TIM3.Prescaler=8
+TIM3.Period=9
+TIM3.Prescaler=99
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
